<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.android.maestro.MainActivity">

    <TextView
        android:text="@string/library"
        style="@style/headerStyle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textviewArtists"
            style="@style/listStyle"
            android:text="@string/artists"/>

        <TextView
            android:id="@+id/textviewPlaylists"
            style="@style/listStyle"
            android:text="@string/playlists"/>

        <TextView
            android:id="@+id/textviewAlbums"
            style="@style/listStyle"
            android:text="@string/albums"/>

        <TextView
            android:id="@+id/textviewNumbers"
            style="@style/listStyle"
            android:text="@string/numbers"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/favorites"
            style="@style/headerStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageviewColdplay"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/coldplay"
                style="@style/imageViewStyle" />

            <ImageView
                android:id="@+id/imageviewEllie"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ellie"
                style="@style/imageViewStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageviewJayZ"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/jayz"
                style="@style/imageViewStyle"/>

            <ImageView
                android:id="@+id/imageviewRihanna"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/rihanna"
                style="@style/imageViewStyle"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
</ScrollView>